@@ -140,7 +140,7 @@
     "nominal_inductive"
     "nominal_inductive2"
     "nominal_primrec"
-    "nonterminals"
+    "nonterminal"
     "notation"
     "note"
     "notepad"
@@ -487,7 +487,7 @@
     "no_translations"
     "no_type_notation"
     "nominal_datatype"
-    "nonterminals"
+    "nonterminal"
     "notation"
     "notepad"
     "oracle"
